updated classes with new `ConfigurableProperty`